# alpen

./: .codespellrc  .justfile
.github/workflows/: cd.yml  ci-build.yml  ci-genparams.yml  ci-sp1-e2e.yml  codex-shadow-review.yml  codex-watcher.yml  cron-nightly-rust.yml  docs.yml  functional.yml  lint-actions.yml  lint.yml  main-eest.yml  mutants.yml  prover.yml  provision-grafana-dashboard.yml  security.yml  shellcheck.yml  staging-eest.yml  test-coverage.yml  unit.yml
contrib/: find_anyhow_in_thiserror.py
crates/alpen-ee/rpc/api/: Cargo.toml
crates/alpen-ee/rpc/api/src/: lib.rs
crates/alpen-ee/rpc/server/src/: block_status.rs  errors.rs  lib.rs
crates/btcio/src/writer/: handle.rs  mod.rs
crates/btcio/src/writer/bundler/: builder.rs  logic.rs  mod.rs  service.rs
crates/chain-worker/: Cargo.toml
crates/chain-worker/src/: context.rs  state.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs
crates/consensus-logic/src/checkpoint_sync/: service.rs  state.rs
crates/db/tests/src/: asm_tests.rs
crates/mpt/src/: lib.rs
crates/ol/block-assembly/: Cargo.toml
crates/ol/block-assembly/src/: block_assembly.rs  context.rs  test_utils.rs
crates/ol/rpc/types/src/: account_summary.rs  checkpoint.rs  jsonschema.rs
crates/ol/state-support-types/src/: index_types.rs  indexer_layer.rs  write_tracking_layer.rs
crates/paas/: README.md
crates/prover-core/: Cargo.toml  README.md
crates/prover-core/src/: lib.rs  prover.rs  stderr_capture.rs
crates/reth/chainspec/src/res/: alpen-dev-chain.json  devnet-chain.json  testnet-chain.json
crates/reth/evm/src/apis/: mod.rs
crates/reth/evm/src/precompiles/: IBridgeOut.sol  bridge.rs
crates/reth/node/: Cargo.toml
crates/reth/node/src/gossip/: package.rs
crates/rpc/open-rpc-spec/src/: lib.rs
crates/snark-acct-types/src/: state.rs
crates/storage/src/: lib.rs
crates/storage/src/managers/: asm.rs  l1.rs
docker/: .env.alpen-fullnode.example  README.md  compose-checkpoint-sync.yml  compose-fullnode.yml
docker/configs/: config.checkpoint-sync.toml
functional-tests/: pyproject.toml
functional-tests/common/config/: __init__.py
functional-tests/common/services/: alpen_client.py
functional-tests/envconfigs/: alpen_client.py
functional-tests/factories/: alpen_client.py
functional-tests/tests/alpen_client/: test_fee_model_gossip.py  test_osaka_clz.py
functional-tests/tests/alpen_client/ee_da/: README.md  codec.py  test_publication_parity_reconstruction.py
functional-tests/tests/alpen_client/precompiles/: test_bridgeout_cap.py
functional-tests/tests/evm/: test_genesis.py
tools/ai-review/: README.md  codex-watch.sh
