[project]
name = "strata-functional-tests"
version = "0.1.0"
description = "Functional test suite for Strata"
requires-python = ">=3.10"

dependencies = [
  "flexitest",
  "requests>=2.34.2",
  "bitcoinlib>=0.7.9",
  "toml>=0.10.2",
  "eth-account>=0.13.0",
  "eth-abi>=5.0.0",
]

[dependency-groups]
dev = ["ruff==0.15.17", "ty>=0.0.49,<0.0.50"]

[tool.uv]

[tool.uv.sources]
flexitest = { git = "https://codeberg.org/treyd/flexitest.git" }

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = [
  # related to star imports
  "F405",
  "F403",
  # if block stuff
  "SIM102",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 100
