[package]
name = "strata-chain-worker"
version = "0.1.0"
edition = "2024"
description = "Chain worker implementation using the OL STF"

[lints]
workspace = true

[dependencies]
strata-acct-types.workspace = true
strata-asm-common.workspace = true
strata-asm-proto-checkpoint-types.workspace = true
strata-bridge-params.workspace = true
strata-checkpoint-types.workspace = true
strata-codec.workspace = true
strata-db-types.workspace = true
strata-identifiers.workspace = true
strata-ledger-types.workspace = true
strata-msg-fmt.workspace = true
strata-node-context.workspace = true
strata-ol-chain-types.workspace = true
strata-ol-da.workspace = true
strata-ol-params.workspace = true
strata-ol-state-support-types.workspace = true
strata-ol-state-types.workspace = true
strata-ol-stf.workspace = true
strata-primitives.workspace = true
strata-service.workspace = true
strata-snark-acct-types.workspace = true
strata-status.workspace = true
strata-storage.workspace = true

anyhow.workspace = true
serde.workspace = true
ssz.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
strata-db-store-sled.workspace = true
strata-ol-state-types = { workspace = true, features = ["test-utils"] }
strata-ol-stf = { workspace = true, features = ["test-utils"] }
strata-predicate.workspace = true
strata-snark-acct-types.workspace = true
strata-storage = { workspace = true, features = ["test-utils"] }
sled.workspace = true
typed-sled.workspace = true
