[package]
edition = "2021"
name = "strata-config"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
bitcoin.workspace = true
schemars = { workspace = true, optional = true }
serde.workspace = true
zeroize.workspace = true

[dev-dependencies]
proptest.workspace = true
toml.workspace = true

[features]
jsonschema = ["dep:schemars"]
