[package]
name = "strata-prover-core"
version = "0.1.0"
edition = "2021"

[features]
remote = ["zkaleido/remote-prover"]

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
borsh.workspace = true
libc = "0.2"
parking_lot.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread"] }
tracing.workspace = true
zkaleido.workspace = true
