[package]
edition = "2021"
name = "alpen-reth-node"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
alpen-reth-evm.workspace = true
alpen-reth-primitives.workspace = true
alpen-reth-rpc.workspace = true
strata-config.workspace = true
strata-primitives.workspace = true

alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types.workspace = true
ciborium.workspace = true
eyre.workspace = true
futures.workspace = true
reth-basic-payload-builder.workspace = true
reth-chainspec.workspace = true
reth-errors.workspace = true
reth-eth-wire.workspace = true
reth-ethereum-engine-primitives.workspace = true
reth-ethereum-payload-builder.workspace = true
reth-ethereum-primitives.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-network.workspace = true
reth-network-api.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-node-ethereum.workspace = true
reth-payload-builder.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-revm.workspace = true
reth-rpc-eth-types.workspace = true
reth-transaction-pool.workspace = true
reth-trie.workspace = true
revm.workspace = true
revm-primitives.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
strata-identifiers = { workspace = true, features = ["test-utils"] }
