[package]
edition = "2021"
name = "alpen-ee-rpc-api"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
alpen-ee-rpc-types = { workspace = true, features = ["jsonschema"] }
jsonrpsee = { workspace = true, features = ["server", "macros"] }
schemars.workspace = true
strata-config = { workspace = true, features = ["jsonschema"] }
strata-open-rpc.workspace = true

[features]
client = ["jsonrpsee/client"]
